--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "satellite.js": "^5.0.0",
     "three": "^0.153.0",
     "web-vitals": "^2.1.4"
   },
