--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
     "@types/three": "^0.152.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fps-stats": "^0.3.1",
     "react-scripts": "5.0.1",
     "satellite.js": "^5.0.0",
     "three": "^0.153.0",
