--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
     "@react-three/drei": "^9.74.6",
     "@react-three/fiber": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,6 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fps-stats": "^0.3.1",
+    "react-icons": "^4.9.0",
+    "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
     "satellite.js": "^5.0.0",
     "three": "^0.153.0",
