--- a/my-app/frontend/package.json
+++ b/my-app/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/three": "^0.152.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
     "react-fps-stats": "^0.3.1",
     "react-icons": "^4.9.0",
     "react-responsive": "^9.0.2",
