--- a/my-app/frontend/package.json
+++ b/my-app/frontend/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.9.0",
     "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.7.1",
     "satellite.js": "^5.0.0",
     "three": "^0.153.0",
     "web-vitals": "^2.1.4"
