sidebar contents finished, about section added

--- a/my-app/frontend/src/config.json
+++ b/my-app/frontend/src/config.json
@@ -1,5 +1,5 @@
 {
-  "all_active_satellites": "https://raw.githubusercontent.com/lennartfynn/glowing-api/main/data/active_all_new.json",
+  "all_active_satellites": "https://raw.githubusercontent.com/lennartfynn/glowing-api/main/data/active_update.json",
   "all_space_objects": "https://raw.githubusercontent.com/lennartfynn/glowing-api/main/data/active_debris_all_new.json",
   "all_space_debris": "https://raw.githubusercontent.com/lennartfynn/glowing-api/main/data/debris_all_new.json",
   "purpose": {
@@ -9,5 +9,13 @@
     "miscellaneous": "https://raw.githubusercontent.com/lennartfynn/glowing-api/main/data/misc_all_new.json",
     "communication": "https://raw.githubusercontent.com/lennartfynn/glowing-api/main/data/comm_all_new.json"
   },
-  "colors_owners": ["#8884d8", "#82ca9d", "#ff4000", "#581f18", "#f6Ae2d"]
+  "colors_owners": [
+    "#8884d8",
+    "#ff4000",
+    "#822e81",
+    "#581f18",
+    "#f6Ae2d",
+    "gray"
+  ],
+  "colors_purpose": ["#8884d8", "#ff4000", "#822e81", "#f6Ae2d", "gray"]
 }
